# arbitrust-x

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-compose2.yml
src/: calculations.rs  main.rs  orderbook_stream.rs  symbols_info.json
src/models/: arb.rs  mod.rs  orderbook.rs  symbols_info.rs
src/utils/: basic.rs
