[package]
name = "arbitrust-x"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
md5 = "0.7.0"
url = "2.5.4"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1.44.0", features = ["full"] }
futures-util = "0.3.31"
tungstenite = "0.26.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
